--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -97,7 +97,7 @@
   flex-grow: 1;
   background-color: inherit;
   border: none;
-  border-radius: 5px 5px 0 0;
+  /* border-radius: 5px 5px 0 0; */
   outline: none;
   font-family: inherit;
   font-size: 16px;
