--- a/public/styles/profile-analytics-price-graph.css
+++ b/public/styles/profile-analytics-price-graph.css
@@ -46,5 +46,15 @@
   text-anchor: end;
   fill: #444;
   font-size: 14px;
-  /* transform: translateY(50%); */
+}
+
+.date-marking-line {
+  stroke-width: 1px;
+  stroke: #999;
+}
+
+.date-marking-text {
+  text-anchor: middle;
+  fill: #444;
+  font-size: 14px;
 }
