--- a/public/styles/sell.css
+++ b/public/styles/sell.css
@@ -441,3 +441,81 @@ input#listing-category {
   overflow: hidden;
   border-radius: 5px;
 }
+
+#recommendations {
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#recommendations-loading > img {
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+#recommendations-loading > div {
+  font-weight: bold;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+#recommendations-content > .material-icons-outlined {
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 15px;
+  font-size: 5em;
+  color: var(--theme-red);
+}
+
+#recommendations-content > div {
+  vertical-align: middle;
+  display: inline-block;
+  width: calc(100% - 100px);
+}
+
+#recommendations-content li {
+  margin-top: 10px;
+}
+
+.cssloader {
+  border: 8px solid white; /* Light grey */
+  border-top: 8px solid red; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+#full-loader {
+  display:flex;
+  z-index: 1000000000;
+  position: fixed;
+  top: 0; left: 0;
+  height: 100vh; width: 100vw;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(8px);
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  transition: opacity 0.25s;
+  opacity: 0;
+  pointer-events: none;
+}
+
+#full-loader.loading {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#loader-text {
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 20px;
+}
