--- a/public/styles/profile-analytics-price-graph.css
+++ b/public/styles/profile-analytics-price-graph.css
@@ -1,48 +1,48 @@
-#price-graph-wrapper {
+.graph-wrapper {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 27px;
   padding: 20px 49px 26px 19px;
   border-radius: 10px;
   box-sizing: border-box;
 }
 
-#price-graph {
+.analytics-graph {
   display: block;
   width: 100%;
   height: 325px;
   /* width: 100%; */
 }
 
-#vertical-axis-label {
+.vertical-axis-label {
   font-size: 16px;
   fill: #444;
 }
 
-#vertical-axis, #horizontal-axis, .price-marking {
+.vertical-axis, .horizontal-axis, .price-marking {
   font-size: 16px;
 }
 
-#vertical-axis, #horizontal-axis {
+.vertical-axis, .horizontal-axis {
   font-size: 16px;
   stroke: #444;
   /* stroke-width: 1px; */
 }
 
-#vertical-axis {
+.vertical-axis {
   stroke-width: 1px;
   margin-top: 28px;
 }
 
-#horizontal-axis {
+.horizontal-axis {
   /* stroke-width: 2px; */
 }
 
-.price-marking-line {
+.vertical-marking-line {
   stroke-width: 1px;
   stroke: #999;
 }
 
-.price-marking-text {
+.vertical-marking-text {
   text-anchor: end;
   fill: #444;
   font-size: 14px;
@@ -59,12 +59,12 @@
   font-size: 14px;
 }
 
-.price-data-point {
+.graph-data-point {
   fill: var(--theme-red);
   /* r: 10px; */
 }
 
-.price-data-line {
+.graph-data-line {
   stroke-width: 1px;
   stroke: var(--theme-red);
 }
