--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -2,6 +2,10 @@ main {
   padding-top: 0;
 }
 
+h2 {
+  margin-top: 32px;
+}
+
 h2:first-child {
   margin-top: 0;
 }
@@ -248,10 +252,7 @@ h2:first-child {
 }
 
 #coins > h2, #green-points > h2 {
-  margin: 32px 0 25px;
-}
-#coins > h2:first-child, #green-points > h2:first-child {
-  margin-top: initial;
+  margin-bottom: 25px;
 }
 
 /* .platform-currency-transaction-history {
@@ -319,7 +320,8 @@ h2:first-child {
 
 #category-search {
   position: relative;
-  margin: 20px 0;
+  /* margin: 20px 0; */
+  margin-bottom: 20px;
   padding: 0;
   border-radius: 7px;
   transition: border-radius 0.2s;
