--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -37,7 +37,7 @@ h2:first-child {
 
 #profile-menu-bar-actions {
   display: flex;
-  padding-left: calc(20% + 7px);
+  padding-left: calc(18% + 7px);
   /* gap: 30px; */
 }
 /* #profile-menu-bar-actions::before {
@@ -108,7 +108,7 @@ h2:first-child {
 }
 
 #user-info {
-  max-width: 20%;
+  width: 18%;
   flex-shrink: 0;
   margin-right: 35px;
 }
