--- a/public/styles/sell.css
+++ b/public/styles/sell.css
@@ -493,7 +493,7 @@ input#listing-category {
 }
 
 #full-loader {
-  display:flex;
+  display: flex;
   z-index: 1000000000;
   position: fixed;
   top: 0; left: 0;
@@ -518,4 +518,30 @@ input#listing-category {
   font-size: 2rem;
   font-weight: bold;
   margin-top: 20px;
+}
+
+.dropdown-suggest {
+  position: absolute;
+  background-color: #fff;
+  border-radius: 7px;
+  box-shadow: 0 0 5px 0 #aaa;
+  max-width: 80%;
+  opacity: 0;
+  pointer-events: none;
+  cursor: pointer;
+  transition: .2s;
+  z-index: 2;
+}
+
+.dropdown-suggest > * {
+  padding: 10px;
+}
+
+.dropdown-suggest > *:hover {
+  background-color: lightgrey;
+}
+
+.dropdown-suggest.display {
+  opacity: 1;
+  pointer-events: all;
 }
